[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/char.png" type="Texture" id=2]
[ext_resource path="res://player/PlayerGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/PlayerCollision.tres" type="Shape2D" id=4]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://world/light.png" type="Texture" id=7]
[ext_resource path="res://player/ZapRayMeter.gd" type="Script" id=8]
[ext_resource path="res://player/ZapRayMeter.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 30, 0, 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13.8, -4360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 0.0470588, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 24, 0, 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 30, 0, 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 6, 0, 6, 6 ), Rect2( 12, 0, 6, 6 ), Rect2( 18, 0, 6, 6 ), Rect2( 0, 0, 6, 6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "make_dust"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "walk_sound"
}, {
"args": [  ],
"method": "walk_sound"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.8, 0.137255, 0.792157, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_invulnerable"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.4, 0.4, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7, 0.7 ]
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.370192, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.278431 )

[sub_resource type="CircleShape2D" id=7]
radius = 2.0

[sub_resource type="Animation" id=8]
resource_name = "cutscene"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "walk_left"
}, {
"args": [  ],
"method": "stop_moving"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:cutscene_control")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "reset"
tracks/0/type = "value"
tracks/0/path = NodePath(".:cutscene_control")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Persists",
"player",
]]
collision_mask = 34
script = ExtResource( 1 )
cutscene_control = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.184631, 0.184637 )
scale = Vector2( 0.150391, 0.147217 )
texture = ExtResource( 7 )
energy = 0.7
range_layer_min = -100
range_layer_max = 512

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
playback_speed = 1.6
anims/blink = SubResource( 5 )

[node name="BoosterParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 2, 1 )
gravity = Vector2( 0, 4 )
initial_velocity = 6.0
initial_velocity_random = 1.0
color_ramp = SubResource( 6 )

[node name="PlayerGun" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 0.240855
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 30, 0, 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 1 )
shape = ExtResource( 4 )
one_way_collision_margin = 0.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
visible = false

[node name="Ground" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.5, 1 )
shape = ExtResource( 4 )

[node name="PowerupDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="PowerupDetector"]
visible = false
shape = ExtResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource( 7 )

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/cutscene = SubResource( 8 )
anims/reset = SubResource( 9 )

[node name="ZapRayMeter" parent="." instance=ExtResource( 9 )]
margin_left = -5.0
margin_right = -4.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 4 )
color = Color( 1, 1, 1, 1 )
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="ZapRayMeter"]
wait_time = 3.0
one_shot = true
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="area_entered" from="PowerupDetector" to="." method="_on_PowerupDetector_area_entered"]
[connection signal="timeout" from="ZapRayMeter/Timer" to="ZapRayMeter" method="_on_Timer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
